--- a/style.css
+++ b/style.css
@@ -125,5 +125,12 @@ button:hover {
   font-size: 0.9rem;
   margin-bottom: 25px;
 }
+@media (max-width: 650px) {
+  #bottom-left, #bottom-right, #card {
+    width: 100%;
+    height: auto;
+  }
+}
+
 
 
