--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ html {
   font-family: 'Karla', sans-serif;
   font-size: 16px;
   font-weight: 400px;
+  margin-left: 25vw;
+  margin-top: 6vw;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -121,13 +123,6 @@ button:hover {
 #bottom-left p {
   font-size: 0.9rem;
   margin-bottom: 25px;
-}
-
-@media (max-width: 650px) {
-  #bottom-left, #bottom-right, #card {
-    width: 100%;
-    height: auto;
-  }
 }
 
 
